tests/errors/first_stage/.extern/extra_chars/extra_chars.am
.extern myext a
.extern myext, ext2
